<resources>
    <string name="app_name">BRCare</string>
    <string name="up_ID">아이디</string>
    <string name="up_open">열기</string>
    <string name="up_close">닫기</string>
    <string name="cap_home">홈</string>
    <string name="cap_healthcare">건강관리</string>
    <string name="cap_bloodpressure">혈압</string>
    <string name="cap_bloodsugar">혈당</string>
    <string name="cap_obesitymanagement">비만관리</string>
    <string name="cap_weight">몸무게</string>
    <string name="cap_weight_title">몸무게 : </string>
    <string name="cap_targetweight">목표체중</string>
    <string name="cap_notice">알림</string>
    <string name="cap_settings">일반 설정</string>
    <string name="cap_generalsettings">일반설정</string>
    <string name="cap_devicesettings">디바이스 설정</string>
    <string name="cap_termofuse">이용약관</string>
    <string name="cap_password">비밀번호</string>
    <string name="cap_login">로그인</string>
    <string name="cap_sign_up">회원가입</string>
    <string name="cap_weight_input">체중 입력</string>
    <string name="cap_target_weight_input">목표 체중</string>
    <string name="cap_consultation_contents">상담 내용</string>
    <string name="cap_title">제목</string>
    <string name="cap_content">내용</string>
    <string name="cap_answer_title">답변 제목</string>
    <string name="cap_answer_content">답변 내용</string>
    <string name="activity_main_notificationconsultation">건강정보</string>
    <string name="activitylogin_autologin">자동로그인</string>
    <string name="activitylogin_forgotid">아이디찾기</string>
    <string name="activitylogin_forgotyourpassword">패스워드 찾기</string>
    <string name="cap_physicalinformation">신체정보</string>
    <string name="cap_height">키</string>
    <string name="cap_height_title">키 : </string>
    <string name="cap_genger">성별</string>
    <string name="low_male">남자</string>
    <string name="low_female">여자</string>
    <string name="cap_name">이름</string>
    <string name="cap_dateofbirth">생년월일</string>
    <string name="cap_mobilenumber">전화번호</string>
    <string name="cap_confirm">확인</string>
    <string name="cap_input">입력</string>
    <string name="up_save">저장하다</string>
    <string name="up_cancel">취소하다</string>
    <string name="activitysignup_title">Confirm member information</string>
    <string name="password_Subtitle">PASSWORD SEARCH</string>
    <string name="cap_confirmpassword">비밀번호 확인</string>
    <string name="activitysignupconfirm_viewterms">약관보기</string>
    <string name="low_agree">동의</string>
    <string name="cap_donotagree">동의안함</string>
    <string name="cap_agree">동의함</string>
    <string name="term_of_use">제 1 조 (목적)\n이 약관은 주식회사 비알네트콤이 제공하는 IoT Mobile 및 비알네트콤과 IoT Mobile 관련 제반 서비스의 이용과 관련하여 회사와 회원과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.\n\n제 2 조 (정의)\n이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n①＂서비스＂라 함은 구현되는 단말기(PC, TV, 휴대형단말기 등의 각종 유무선 장치를 포함)와 상관없이 "회원"이 이용할 수 있는 IoT Mobile및 비트컴퓨터와 IoT Mobile 관련 제반 서비스를 의미합니다.\n②"회원"이라 함은 회사의 "서비스"에 접속하여 이 약관에 따라 "회사"와 이용계약을 체결하고 "회사"가 제공하는 "서비스"를 이용하는 고객을 말합니다.\n③"아이디(ID)"라 함은 "회원"의 식별과 "서비스" 이용을 위하여 "회원"이 정하고 "회사"가 승인하는 문자와 숫자의 조합을 의미합니다.\n④"비밀번호"라 함은 "회원"이 부여 받은 "아이디와 일치되는 "회원"임을 확인하고 비밀보호를 위해 "회원" 자신이 정한 문자 또는 숫자의 조합을 의미합니다.\n⑤"유료서비스"라 함은 "회사"가 유료로 제공하는 각종 온라인디지털콘텐츠(각종 정보콘텐츠, VOD, 아이템 기타 유료콘텐츠를 포함) 및 제반 서비스를 의미합니다.\n.</string>
    <string name="activityforgotid_findaid">아이디 찾기</string>
    <string name="default_health_recommendation">오늘은 건강메시지가 도착하지\n않았습니다</string>
    <string name="goal">목표 체중</string>
    <string name="goal_short">목표</string>
    <string name="cap_cancel">취소</string>
    <string name="cap_systolic">수축기</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="cap_diastole">이완기</string>
    <string name="cap_pulse">맥박</string>
    <string name="unit_bpm">BPM</string>
    <string name="unit_kg">kg</string>
    <string name="cap_mediation">복약 여부</string>
    <string name="cap_taking">복용</string>
    <string name="cap_nottaking">미복용</string>
    <string name="cap_enough_exercise">운동여부</string>
    <string name="cap_enough">충분함</string>
    <string name="cap_insufficiency">안함</string>
    <string name="cap_bloodsugarinput">혈당입력</string>
    <string name="cap_bloodpresureinput">혈압입력</string>
    <string name="cap_modify_consultation_contents">상담 내용 수정</string>
    <string name="cap_reservation">예약</string>
    <string name="cap_etc">기타</string>
    <string name="cap_delete">삭제</string>
    <string name="cap_modify">수정</string>
    <string name="cap_phone_number">전화번호</string>
    <string name="cap_login_id">아이디</string>
    <string name="cap_male">남자</string>
    <string name="cap_female">여자</string>
    <string name="cap_ceremony">식전</string>
    <string name="cap_ceremony_title">식전 : </string>
    <string name="cap_logout_ask">로그아웃 하시겠습니까?</string>
    <string name="cap_input_current_password">현재 비밀번호를 입력하세요</string>
    <string name="cap_confirm_pass">비밀번호확인</string>
    <string name="cap_bluetooth">디바이스 설정</string>
    <string name="cap_list_connected_device">연결된 디바이스 목록</string>
    <string name="cap_basic_metabolism_title">기초 대사량 : </string>
    <string name="cap_user_info">개인 정보</string>
    <string name="cap_change_pass">비밀번호 변경</string>
    <string name="cap_log_out">로그아웃</string>
    <string name="mmHg">mmHg</string>
    <string name="cap_systole">수축기</string>
    <string name="cap_diastolic_pressure">이완기</string>
    <string name="id_email">아이디</string>
    <string name="success">성공</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="forgot_id_check">아이디 확인</string>
    <string name="forgot_id_response">당신의 아이디는  [$$$]</string>
    <string name="investigate_title">Investigation of paperwork</string>
    <string name="investigate_smoking_habit">흡연습관</string>
    <string name="investigate_smoking_habit_choice_1">안피운다</string>
    <string name="investigate_smoking_habit_choice_2">10년전부터 금연</string>
    <string name="investigate_smoking_habit_choice_3">하루에 반 갑 이하</string>
    <string name="investigate_smoking_habit_choice_4">하루에 한 갑 이하</string>
    <string name="investigate_smoking_habit_choice_5">하루에 두 갑 이하</string>
    <string name="investigate_smoking_habit_choice_6">하루에 두 갑 이상</string>
    <string name="investigate_life">생활만족도</string>
    <string name="investigate_life_choice_1">만족한다</string>
    <string name="investigate_life_choice_2">보통이다</string>
    <string name="investigate_life_choice_3">불만족스럽다</string>
    <string name="investigate_meat">육류섭취</string>
    <string name="investigate_meat_choice_1">하루에 1회 이하</string>
    <string name="investigate_meat_choice_2">1주일에 4-5회</string>
    <string name="investigate_meat_choice_3">1주일에 4회 이상</string>
    <string name="investigate_fruit">과일/야채 섭취</string>
    <string name="investigate_fruit_choice_1">하루에 2회</string>
    <string name="investigate_fruit_choice_2">하루에 1회</string>
    <string name="investigate_fruit_choice_3">주 5회 이하</string>
    <string name="investigate_fruit_choice_4">2주에 1회 이하</string>
    <string name="investigate_sleep">수면</string>
    <string name="investigate_sleep_choice_1">항상부족</string>
    <string name="investigate_sleep_choice_2">종종부족</string>
    <string name="investigate_sleep_choice_3">항상만족</string>
    <string name="investigate_drink">음주</string>
    <string name="investigate_drink_choice_1">안마신다</string>
    <string name="investigate_drink_choice_2">주 1-2회</string>
    <string name="investigate_drink_choice_3">주 3회 이상</string>
    <string name="investigate_blood_choice_1">45세 이하 고혈압</string>
    <string name="investigate_blood_choice_2">45세 이상 고혈압</string>
    <string name="investigate_blood_choice_3">60세 이상 고혈압</string>
    <string name="investigate_blood_choice_4">정상</string>
    <string name="investigate_payer">당뇨</string>
    <string name="investigate_payer_choice_1">있다</string>
    <string name="investigate_payer_choice_2">없다</string>
    <string name="investigate_exercise">운동</string>
    <string name="investigate_exercise_choice_1">주 4회 이상</string>
    <string name="investigate_exercise_choice_2">주 3회 이하</string>
    <string name="investigate_exercise_choice_3">거의 안함</string>
    <string name="investigate_cold">감기</string>
    <string name="investigate_cold_choice_1">1년 중 3번 이상</string>
    <string name="investigate_cold_choice_2">1년 중 1-2회</string>
    <string name="investigate_cold_choice_3">없음</string>
    <string name="investigate_character">성격</string>
    <string name="investigate_character_choice_1">줄을 서거나 시간이 낭비되면 화가남</string>
    <string name="investigate_character_choice_2">내색하지 않음</string>
    <string name="investigate_character_choice_3">속을 태우지 않음</string>
    <string name="investigate_character_choice_4">금방 수그러짐</string>
    <string name="investigate_tension">긴장도</string>
    <string name="investigate_tension_choice_1">자신이 긴장을 풀 수 있다</string>
    <string name="investigate_tension_choice_2">풀리기를 기다린다</string>
    <string name="investigate_year">세</string>
    <string name="investigate_the_health_of">의 건강나이는</string>
    <string name="investigate_next_stage">확인</string>
    <string name="cap_beforemeals">식전</string>
    <string name="cap_aftermeals">식후</string>
    <string name="cap_weight_kg">체중(kg)</string>
    <string name="cap_height_cm">신장(cm)</string>
    <string name="up_bmi_kg_m2">kg/m2</string>
    <string name="cap_metabolims_kcal">기초대사량(kcal)</string>
    <string name="cap_period_search">기간 검색</string>
    <string name="cap_measurement_search">측정 타입</string>
    <string name="cap_value">전체</string>
    <string name="unit_mg_dl">mg/dl</string>
    <string name="cap_on">ON</string>
    <string name="cap_off">OFF</string>
    <string name="cap_and_device_pairing">AND Device Pairing(혈압)</string>
    <string name="cap_allmedicus_glucodr_pairing">CareSens N Premier(혈당)</string>
    <string name="activity_device_scan_title">BLE</string>
    <string name="permission_denied">PERMISSION DENIED</string>
    <string name="upcase_im_sure">I\'M SURE</string>
    <string name="upcase_goto_settings">GO TO SETTINGS</string>
    <string name="upcase_retry">RETRY</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="activity_device_scan_0devicesfound">0\\ndevices found</string>
    <string name="cap_scan">Scan</string>
    <string name="cap_stop_scanning">Stop scanning</string>
    <string name="cap_search">Search</string>
    <string name="cap_last">최근</string>
    <string name="cap_week">일</string>
    <string name="cap_month">주</string>
    <string name="cap_year">월</string>
    <string name="cap_total">전체</string>
    <string name="cap_complete">자동</string>
    <string name="cap_progressing">수동</string>
    <string name="double_back_to_exit">뒤로가기를 한번 더 누르시면 종료됩니다.</string>
    <string name="bubble_bar_title">표준체중</string>
    <string name="cap_time_measuring">혈당구분</string>
    <string name="error_incorrect_login_information">로그인정보가 틀립니다</string>
    <string name="cap_confirm_no">아니오</string>
    <string name="cap_confirm_yes">예</string>
    <string name="title_paired_devices">페어링된 기기</string>
    <string name="title_other_devices">페어링되지 않은 기기</string>
    <string name="button_scan">Scan</string>
    <string name="cap_membership_withdrawal">회원탈퇴</string>
</resources>