<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/dialog_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/BCTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:text="@string/cap_log_out" />

        <TextView
            android:id="@+id/txtMessage"
            style="@style/BCTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:text="@string/cap_logout_ask" />


        <Button
            android:id="@+id/btnConfirm"
            style="@style/BCButtonConfirmPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:text="@string/cap_confirm" />

    </LinearLayout>

</LinearLayout>