<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvTitle"
        style="@style/BCInputTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_weight="0.25"
        android:gravity="left"
        android:text="@string/cap_genger" />

    <RadioGroup
        android:id="@+id/rgChoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_weight="0.75"
        android:checkedButton="@+id/rdo1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdo1"
            style="@style/BCRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/low_male" />

        <RadioButton
            style="@style/BCRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/low_female" />

    </RadioGroup>

</LinearLayout>