<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_grey"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/title"
            style="@style/BCTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_confirmpassword"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/BCTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/cap_input_current_password" />

        <include
            android:id="@+id/vgPass"
            layout="@layout/viewgroup_input_password" />
        <include
            android:id="@+id/vgPasswordConfirm"
            layout="@layout/viewgroup_input_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/BCButtonConfirmGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default"
                android:layout_weight="0.5"
                android:text="@string/cap_cancel"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnConfirm"
                style="@style/BCButtonConfirmPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default"
                android:layout_weight="0.5"
                android:text="@string/cap_confirm" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>