<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"

    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTerms"
            style="@style/BCTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/padding_default"
            android:layout_marginRight="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:text="@string/term_of_use" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDontAgree"
                style="@style/BCButtonConfirmGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default"
                android:layout_weight="1"
                android:text="@string/cap_donotagree" />

            <Button
                android:id="@+id/btnAgree"
                style="@style/BCButtonConfirmPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default"
                android:layout_weight="1"
                android:text="@string/cap_agree" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
