<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar" />

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_paired_devices"
            android:textColor="#fff"
            android:visibility="gone" />

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="false" />

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_other_devices"
            android:textColor="#fff"
            android:visibility="gone" />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:stackFromBottom="false" />

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/button_scan" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>