<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="asia.health.bitcare.fragment.GeneralSettingsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardMaxElevation="@dimen/cardview_max_elevation_0dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnUserInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/padding_16dp">

                <TextView
                    style="@style/BCTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cap_user_info" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gh01_bg" />

            <LinearLayout
                android:id="@+id/lnChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16dp">

                <TextView
                    style="@style/BCTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cap_change_pass" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gh01_bg" />

            <LinearLayout
                android:id="@+id/lnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16dp">

                <TextView
                    style="@style/BCTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cap_log_out" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gh01_bg" />
            <LinearLayout
                android:id="@+id/lnMemberShip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16dp">

                <TextView
                    style="@style/BCTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cap_membership_withdrawal" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
